clear Code